--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -96,9 +96,9 @@
     // position: absolute;
     // top: 50%;
     // transform: translateY(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     // padding: 0 15px;
     .banner-content {
       width: 100%;
@@ -148,7 +148,7 @@
     bottom: 0;
     width: 100%;
     min-height: 100px;
-    height: 15vh;
+    height: 20vh;
     .parallax > use {
       animation: moveForever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
     }
