--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Montserrat:wght@200;300;400;500;600&display=swap");
 html {
   overflow-x: hidden;
+  overscroll-behavior: contain;
 }
 
 html,
