--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,12 +864,12 @@ a {
   background: -webkit-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
-  height: calc(100vh - 55px);
+  height: 100vh;
 }
 
-@media (min-width: 992px) {
+@media only screen and (hover: none) {
   .banner {
-    height: 100vh;
+    height: calc(100vh - 55px);
   }
 }
 
@@ -999,7 +999,7 @@ a {
 }
 
 .about-us {
-  background-color: #000000;
+  background-color: #ffffff;
   padding: 50px 0;
 }
 
