--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -87,10 +87,12 @@
     rgba($themeSecondary, 1) 0%,
     rgba($themePrimary, 1) 100%
   );
-  height: calc(100vh - 55px);
-  @media (min-width: 992px) {
-    height: 100vh;
+  height: 100vh;
+  @media only screen and (hover: none) {
+    height: calc(100vh - 55px);
   }
+  // @media (min-width: 992px) {
+  // }
   .inner-banner {
     width: 100%;
     height: 100%;
@@ -168,7 +170,7 @@
 
 // About Section Start
 .about-us {
-  background-color: $blackColor;
+  background-color: $whiteColor;
   padding: 50px 0;
   @media (min-width: 992px) {
     padding: 100px 0;
