--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -1,7 +1,7 @@
 // Preset Styles
 html {
   overflow-x: hidden;
-  overscroll-behavior: contain;
+  // overscroll-behavior: contain;
 }
 html,
 body {
