--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,12 @@ body ::-webkit-scrollbar-track {
 
 html ::-webkit-scrollbar-thumb,
 body ::-webkit-scrollbar-thumb {
-  background: #7159cb;
+  background: #23c3ff;
 }
 
 html ::-webkit-scrollbar-thumb:hover,
 body ::-webkit-scrollbar-thumb:hover {
-  background: #543ab7;
+  background: #00aeef;
 }
 
 a {
@@ -864,6 +864,12 @@ a {
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
   height: 100vh;
+}
+
+@media only screen and (max-width: 991px) and (hover: none) {
+  .banner {
+    height: calc(100vh - 56px);
+  }
 }
 
 .banner .inner-banner {
