--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -14,10 +14,10 @@ body {
     background: #f1f1f1;
   }
   ::-webkit-scrollbar-thumb {
-    background: lighten($color: $themeSecondary, $amount: 10%);
+    background: lighten($color: $themePrimary, $amount: 10%);
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: $themeSecondary;
+    background: $themePrimary;
   }
 }
 a {
